<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_rain"
    id="karoo-rain-radar"
    scansDevices="false"
    mapLayer="true">

    <DataType
        typeId="radar-preview"
        displayName="@string/radar_preview_name"
        description="@string/radar_preview_description"
        graphical="true"
        icon="@drawable/ic_rain" />

    <DataType
        typeId="rain-forecast"
        displayName="@string/rain_forecast_name"
        description="@string/rain_forecast_description"
        graphical="true"
        icon="@drawable/ic_rain" />

    <DataType
        typeId="rain-timing"
        displayName="@string/rain_timing_name"
        description="@string/rain_timing_description"
        graphical="true"
        icon="@drawable/ic_rain" />

</ExtensionInfo>
